--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@farcaster/frame-sdk": "latest",
     "@farcaster/frame-wagmi-connector": "^0.0.22",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.45.1",
     "@types/styled-components": "^5.1.34",
     "react": "^18.3.1",
